wp-content/themes/museedesnuages/src/scss/layouts/_path.scss
.path {
    position: relative;
    height: calc(10027px + 500px);
    z-index: 5;

    .pathImg {
        position: absolute;
        padding-top: 500px;
        left: 50%;
        transform: translateX(-50%);
        z-index: 2;
    }

    .gradient {
        position: fixed;
        bottom: 0;
        width: 100%;
        height: 25vh;
        background:  linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0.94) 25%, rgba(255,255,255,0.96) 52%, rgba(255,255,255,1) 58%, rgba(255,255,255,1) 100%);
        opacity: 0;
        z-index: 3;
    }

    #triggerGradient {
        //padding-top: 200px;
    }
}

